--- a/src/styles/global/layout.scss
+++ b/src/styles/global/layout.scss
@@ -15,12 +15,19 @@ html {
   margin: 0 auto;
 }
 
-body, .template-collection .grid__item {
-  -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
-     -moz-animation: fadein 3s; /* Firefox < 16 */
-      -ms-animation: fadein 3s; /* Internet Explorer */
-       -o-animation: fadein 3s; /* Opera < 12.1 */
-          animation: fadein 3s;
+body, .grid__item {
+  -webkit-animation: fadein 2.5s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 2.5s; /* Firefox < 16 */
+      -ms-animation: fadein 2.5s; /* Internet Explorer */
+       -o-animation: fadein 2.5s; /* Opera < 12.1 */
+          animation: fadein 2.5s;
+}
+.template-collection #collection-grid {
+  -webkit-animation: fadein 3.5s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 3.5s; /* Firefox < 16 */
+      -ms-animation: fadein 3.5s; /* Internet Explorer */
+       -o-animation: fadein 3.5s; /* Opera < 12.1 */
+          animation: fadein 3.5s;
 }
 
 @keyframes fadein {
