--- a/src/templates/collection.liquid
+++ b/src/templates/collection.liquid
@@ -1,7 +1,7 @@
 {% include 'collection-nav' %}
 
-{% paginate collection.products by 12 %}
-  <div class="grid endless-scroll" id="collection-grid">
+{% paginate collection.products by 5 %}
+  <div class="grid endless-scroll clearfix" id="collection-grid">
     {% for product in collection.products %}
       <div class="grid__item small--one-whole small--padding-top-default">
         {% if product.featured_image != blank %}
@@ -74,15 +74,15 @@
     {% endfor %}
   </div>
 
-  {% comment %} {% if paginate.pages > 1 %}
-    {% include 'pagination' %}
-  {% endif %}
-{% endpaginate %} {% endcomment %}
-
-  <div class="endless-pagination">
+  <div class="endless-pagination clearfix">
     {% if paginate.next %}
-    <script>
-     document.addEventListener("DOMContentLoaded", function() {
+      <a href="{{ paginate.next.url }}">Loading More</a>
+    {% endif %}
+  </div>
+  {% endpaginate %}
+
+<script>
+function addCss() {
   var classes = [
     "one-half",
     "four-twelfths",
@@ -105,21 +105,6 @@
     "medium-up--padding-top-two"
   ]
 
-  var endlessScroll = new Ajaxinate({
-    container: '#collection-grid',
-    pagination: '.endless-pagination'
-  });
-
-  addCss(classes, offset, spacing); 
-});
-    </script>
-      <a href="{{ paginate.next.url }}">Loading More</a>
-    {% endif %}
-  </div>
-  {% endpaginate %}
-
-<script>
-function addCss(classes, offset, spacing) {
   var grid = document.getElementById("collection-grid").children;
   
   var i;
@@ -129,39 +114,45 @@ function addCss(classes, offset, spacing) {
   }
 }
 
-//document.addEventListener("DOMContentLoaded", function() {
-  document.addEventListener("DOMContentLoaded", function() {
-  var classes = [
-    "one-half",
-    "four-twelfths",
-    "three-twelfths",
-    "four-twelfths",
-    "four-twelfths"
-  ]
-  var offset = [
-    "medium-up--push-none",
-    "medium-up--push-two-twelfths",
-    "medium-up--push-two-twelfths",
-    "medium-up--push-two-twelfths",
-    "medium-up--push-three-twelfths"
-  ]
-  var spacing = [
-    "medium-up--padding-top-none",
-    "medium-up--padding-top-none",
-    "medium-up--padding-top-one",
-    "medium-up--padding-top-two",
-    "medium-up--padding-top-two"
-  ]
-
-  var endlessScroll = new Ajaxinate({
-    container: '#collection-grid',
-    pagination: '.endless-pagination'
-  });
-
-  addCss(classes, offset, spacing); 
+document.addEventListener("DOMContentLoaded", function() {
+  addCss();
 });
 
+var isInViewport = function (elem) {
+  var bounding = elem.getBoundingClientRect();
+    return (
+      bounding.top >= 0 &&
+      bounding.left >= 0 &&
+      bounding.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+      bounding.right <= (window.innerWidth || document.documentElement.clientWidth)
+    );
+};
 
+var ep = document.querySelector('.endless-pagination');
+
+function handleScroll(event) {
+ if (isInViewport(ep)) {
+    window.removeEventListener('scroll', handleScroll, false);
+    var nextPageUrl = ep.childNodes[1].getAttribute('href');
+    var req = new XMLHttpRequest();
+    req.onreadystatechange = function success() {
+       if (req.readyState === 4 && req.status === 200) {
+        const newContainer = req.responseXML.querySelector('#collection-grid');
+        const newPagination = req.responseXML.querySelectorAll('.endless-pagination');
+        console.log(newPagination[0]);
+        document.getElementById("collection-grid").insertAdjacentHTML('beforeend', newContainer.innerHTML);
+        ep.innerHTML = newPagination[0].innerHTML;
+        addCss();
+        window.addEventListener('scroll', handleScroll, false);
+       }
+    }
+    req.open('GET', nextPageUrl);
+    req.responseType = 'document';
+    req.send();
+    }
+}
+
+window.addEventListener('scroll', handleScroll, false);
 
 
 </script>
