--- a/src/styles/modules/site-header.scss
+++ b/src/styles/modules/site-header.scss
@@ -50,6 +50,14 @@
     align-self: flex-end;
     align-items: flex-end;
 
+    .grid {
+      margin-left: 0;
+
+      .grid__item {
+        padding-left: 0;
+      }
+    }
+
     input {
       color: #f1f1f1;
       background: transparent;
