--- a/src/styles/modules/cart.scss
+++ b/src/styles/modules/cart.scss
@@ -4,3 +4,60 @@
 p.ajaxified-cart-feedback {
     line-height: 1.5em;
 }
+
+
+table {
+
+    tr {
+        display: block;
+        margin-bottom: 2em;
+        border-bottom: 1px solid;
+
+        &:last-of-type {
+            margin-bottom: 0;
+        }
+
+    }
+    td {
+        text-align: left;
+        border-bottom: 0;
+        vertical-align: top;
+        padding: 1.5em;
+
+        &:last-of-type {
+            padding-right: 0;
+        }
+
+        &.image {
+            width: 20%;
+            padding-left: 0;
+        }
+        &.remove {
+            a {
+                float: right;
+                clear: left;
+            }
+        }
+    }
+}
+
+.btn2 {
+    border: 0;
+}
+.btn {
+    font-family: $font-stack-body;
+    width: 50%;
+    padding: 10px;
+    background: black;
+    color: white;
+    border: none;
+    margin: 10px 0;
+}
+
+@include media-query($small) {
+    table {
+        td {
+            padding: 1em;
+        }
+    }
+}
