--- a/src/templates/cart.liquid
+++ b/src/templates/cart.liquid
@@ -1,16 +1,18 @@
+<div class="grid flex-center">
+  <div class="grid__item medium-up--seven-twelfths small--one-whole">
 {% if cart.item_count > 0 %}
   <h1>{{ 'cart.general.title' | t }}</h1>
 
   <form action="/cart" method="post" novalidate>
     <table class="responsive-table">
-      <thead class="small--hide">
+      {% comment %} <thead class="small--hide">
         <tr>
           <th colspan="2">{{ 'cart.label.product' | t }}</th>
           <th>{{ 'cart.label.price' | t }}</th>
-          {% comment %} <th>{{ 'cart.label.quantity' | t }}</th> {% endcomment %}
+          <th>{{ 'cart.label.quantity' | t }}</th>
           <th>{{ 'cart.label.total' | t }}</th>
         </tr>
-      </thead>
+      </thead> {% endcomment %}
       <tbody>
 
         {% for item in cart.items %}
@@ -25,7 +27,7 @@
 
           <tr class="responsive-table-row">
 
-            <td data-label="{{ 'customer.order.product' | t }}">
+            <td class="image" data-label="{{ 'customer.order.product' | t }}">
 
               {% if item.image != blank %}
                 <a href="{{ item.url | within: collections.all }}">
@@ -35,10 +37,10 @@
 
             </td>
             <td>
-              <a href="{{ item.url }}">{{ item.product.title }}</a>
+              <a href="{{ item.url }}">{{ item.product.title }}</a> <br>
 
               {% unless item.product.has_only_default_variant %}
-                <p>{{ item.variant.title }}</p>
+                {{ item.variant.title }}<br>
               {% endunless %}
 
               {%- assign property_size = item.properties | size -%}
@@ -58,50 +60,55 @@
                 {% endfor %}
               {% endif %}
 
-              <a href="/cart/change?line={{ forloop.index }}&amp;quantity=0">
-                <small>{{ 'cart.general.remove' | t }}</small>
-              </a>
-            </td>
-            <td data-label="{{ 'cart.label.price' | t }}">
+              {{ 'cart.label.price' | t }}
               {% if item.original_line_price != item.line_price %}
                 <span class="visually-hidden">{{ 'cart.label.discounted_price' | t }}</span>
-                {{ item.price | money }}
-                <span class="visually-hidden">{{ 'cart.label.original_price' | t }}</span>
-                <s>{{ item.original_price | money }}</s>
+                {{ item.price | | money_with_currency }}
+                <span class="visually-hidden">{{ 'cart.label.original_price' | t }}:</span>
+                <s>{{ item.original_price | money_with_currency }}</s>
               {% else %}
-                {{ item.price | money }}
+                {{ item.price | money_with_currency }}
               {% endif %}
-            </td>
-            {% comment %} <td data-label="{{ 'cart.label.quantity' | t }}">
-              <input type="number"
+              <br><br>
+              {{ 'cart.label.quantity' | t }} :
+              <input  style="width: 30%;" type="number"
                      name="updates[]"
                      id="updates_{{ item.key }}"
                      value="{{ item.quantity }}"
                      min="0"
                      aria-label="{{ 'cart.general.item_quantity' | t }}">
-            </td> {% endcomment %}
-            <td data-label="{{ 'cart.label.total' | t }}">
-              {{ item.line_price | money }}
             </td>
+            <td class="remove">
+              <a href="/cart/change?line={{ forloop.index }}&amp;quantity=0">
+                {% include 'icon-close' %}
+              </a>
+            </td>
+            {% comment %} <td data-label="{{ 'cart.label.total' | t }}">
+            Total: <br>
+              {{ item.line_price | money_with_currency }}
+            </td> {% endcomment %}
+            <div style="clear: both"></div>
           </tr>
 
         {% endfor %}
       </tbody>
     </table>
 
-    {% if settings.cart_notes_enable %}
+    {% comment %} {% if settings.cart_notes_enable %}
       <label for="CartSpecialInstructions">{{ 'cart.general.note' | t }}</label>
       <textarea name="note" id="CartSpecialInstructions">{{ cart.note }}</textarea>
-    {% endif %}
+    {% endif %} {% endcomment %}
 
-    <p>{{ 'cart.general.subtotal' | t }}</p>
-    <p>{{ cart.total_price | money }}</p>
+  <div style="text-align: center; margin-top: 60px;">
+    {{ 'cart.general.subtotal' | t }}: 
+    {{ cart.total_price | money_with_currency }} <br>
     {% if cart.total_discounts > 0 %}
-      <p>{{ 'cart.general.savings' | t }} {{ cart.total_discounts | money }}</p>
+      {{ 'cart.general.savings' | t }} {{ cart.total_discounts | money_with_currency }}<br>
     {% endif %}
-    <p>{{ 'cart.general.shipping_at_checkout' | t }}</p>
-    <input type="submit" name="update" value="{{ 'cart.general.update' | t }}">
+    {{ 'cart.general.shipping_at_checkout' | t }}<br><br>
+    <input type="submit" name="update" class="btn2" value="{{ 'cart.general.update' | t }}"><br>
     <input type="submit" name="checkout" class="btn" value="{{ 'cart.general.checkout' | t }}">
+  </div>
   </form>
 {% else %}
   <h1>{{ 'cart.general.title' | t }}</h1>
@@ -124,3 +131,5 @@
     <p>{{ 'cart.general.cookies_required' | t }}</p>
   </div>
 {% endif %}
+</div>
+</div>
