Mobile aesthetic issues fixed

--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -47,7 +47,7 @@
 </style>
 
 <div data-section-id="{{ section.id }}" data-section-type="header-section">
-  <header id="site-header" class="site-header" role="banner" style="width: 100%; display: flex; justify-content: space-between; justify-items: center; padding-bottom: 5em;">
+  <header id="site-header" class="site-header" role="banner">
     <div role="navigation">
       <a class="navigation-toggle" href="#" data-toggle="body">
         <span class="span-hamburger">{% include 'icon-hamburger' %}</span>
