--- a/src/sections/product-list.liquid
+++ b/src/sections/product-list.liquid
@@ -141,7 +141,7 @@
               {% assign content = disturbers.settings.content %}
             {% endif %}
 
-            <div class="grid__item product-disturber">
+            <div class="grid__item small--one-whole small--padding-top-default product-disturber">
               <a class="product-item-link" href="{{ disturbers.settings.url }}">
                 <div class="product-item-card">
                   {{ image.src | img_url: '' | img_tag: image.alt }}
