--- a/src/styles/global/responsive-tables.scss
+++ b/src/styles/global/responsive-tables.scss
@@ -2,6 +2,44 @@
   Responsive tables, defined with .responsive-table on table element.
 ==============================================================================*/
 @include media-query($small) {
+  .template-product .responsive-table {
+    tr,
+    td {
+      float: left;
+      clear: both;
+      width: 100%;
+    }
+
+    th,
+    td {
+      display: block;
+      text-align: right;
+      padding: 0.1em 0.7em;
+      margin: 0;
+    }
+
+    td::before {
+      content: attr(data-label);
+      float: left;
+      text-align: center;
+      padding-right: 10px;
+    }
+    .responsive-table-row + .responsive-table-row,
+    tfoot > .responsive-table-row:first-child {
+      position: relative;
+      margin-top: 10px;
+      padding-top: $gutter / 2;
+    }
+  }
+
+  // Add a keyline between rows
+  .responsive-table-row + .responsive-table-row,
+  tfoot > .responsive-table-row:first-child {
+    // position: relative;
+    // margin-top: 10px;
+    // padding-top: $gutter / 2;
+  }
+
   .responsive-table {
     width: 100%;
 
