--- a/src/snippets/newsletter.liquid
+++ b/src/snippets/newsletter.liquid
@@ -23,7 +23,7 @@
             </div>
 
             <div id="submit-button" style="flex-basis: 5%;">
-                <input type="submit" value="→" name="subscribe" id="change-border" style="width: 100%; border: 0;">
+                <input type="submit" value="→" name="subscribe" id="change-border" style="width: 100%; border: 0; background: transparent;">
             </div>
         </div>
     </div>
