--- a/src/styles/modules/collection-nav.scss
+++ b/src/styles/modules/collection-nav.scss
@@ -5,6 +5,9 @@
 	user-select: none;
   width: 50%;
   margin:  0 auto 5em auto;
+  @include media-query($small) {
+    margin-bottom: $gutter*2;
+  }
 	padding: 0;
 	display: flex;
   align-items: flex-start;
