Responsive tablet fixes

--- a/src/snippets/newsletter.liquid
+++ b/src/snippets/newsletter.liquid
@@ -19,7 +19,7 @@
 
         <div class="input">
             <div id="email-input" style="flex-basis: 95%;">
-                <input type="email" placeholder="email" value="" name="EMAIL" autocomplete="off" style="width: 100%; border: 0;">
+                <input type="email" placeholder="email" value="" name="EMAIL" autocomplete="off" style="width: 100%; border: 0; text-indent: 0px;">
             </div>
 
             <div id="submit-button" style="flex-basis: 5%;">
