--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -87,6 +87,23 @@
                 {% endfor %}
             </div>
           </div>
+      {% else %}
+            <div class="product-images-wrapper">
+            <div class="product-images siema">
+            <div class="product-img">
+            {% assign img_url = product.featured_image.src | img_url: '1x1' | replace: '_1x1.', '_{width}x.' %}
+            <img id="{{ img_id }}"
+                class="lazyload"
+                src="{{ product.featured_image.src | img_url: '200x' }}"
+                data-src="{{ img_url }}"
+                data-widths="[180, 360, 540, 720, 800, 900, 1080, 1296, 1512, 1728, 2048]"
+                data-aspectratio="{{ product.featured_image.src.aspect_ratio }}"
+                data-sizes="auto"
+                data-parent-fit="cover"
+                alt="{{ product.featured_image.src.alt | escape }}">
+            </div>
+            </div>
+            </div>
       {% endif %} 
     </div>
 
@@ -207,7 +224,6 @@
   $( ".toggle" ).click(function() {
     $( ".toggle-content" ).fadeToggle("slow");
   });
-
 
 // Slideshow
 
@@ -338,8 +354,6 @@ document.addEventListener('click', (e) => {
     }
   }
 });
-
-
 {% endjavascript %}
 
 {% schema %}
