--- a/src/styles/modules/product-page.scss
+++ b/src/styles/modules/product-page.scss
@@ -28,10 +28,7 @@ body.template-product, html.template-product {
             @include media-query($small) {
              padding: $gutter;
             }
-        margin-top: $gutter*3;
-            @include media-query($small) {
-                margin-top: $gutter*2;
-            }
+        margin-top: $gutter*2;
         }
     }
 
@@ -245,5 +242,36 @@ table {
         h1 {
             margin-top: 0;
         }
+    }
+  }
+
+  @media only screen and (max-width: 1035px) and (min-width: 750px) {
+    .product-images-wrapper {
+        height: 100%;
+    }
+    .product-images-wrapper {
+        div {
+            height: 100%;
+        }
+    }
+    .product-images-wrapper {
+        .product-images {
+            .product-img {
+                height: 100%;
+                overflow-x: hidden;
+                padding: 0;
+                margin: 0;
+            }
+        }
+    }
+    .template-product {
+        #shopify-section-product {
+            img {
+            height: 100% !important;
+            }
+        }
+    }
+    .template-product footer {
+        margin-top: $gutter + $gutter/2;
     }
   }
