Temporary newsletter sign-up solution

--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -31,7 +31,7 @@
           {% endfor %}     
         </ul>
         <div class="grid__item medium-up--one-quarter small--one-whole small--padding-top-default newsletter">
-          {% include 'newsletter' %}
+         {% include 'newsletter-header' %}
         </div>
       </div>
   </footer>
