--- a/src/snippets/newsletter-header.liquid
+++ b/src/snippets/newsletter-header.liquid
@@ -1,5 +1,5 @@
-<form id="subscribe-form" action="https://rudigernreich.us18.list-manage.com/subscribe/post-json?u=3f4382ce9ff0dc514dc0911f1&amp;id=879e3f2550" method="get">
-    <div id="mc_embed_signup_scroll">
+ <form method="">
+    <div>
 
     <div id="mce-responses" class="clear">
         <div class="response" id="mce-error-response" style="display: none;">
@@ -12,8 +12,8 @@
     <input type="text" name="b_3f4382ce9ff0dc514dc0911f1_879e3f2550" tabindex="-1" value="">
     </div>
 
-    <div id="subscribe-box">
-        <div id="subscribe-result">
+    <div id="subscribe-none">
+        <div id="subscribe-none">
             sign up
         </div>
 
