--- a/src/templates/blog.liquid
+++ b/src/templates/blog.liquid
@@ -1,5 +1,8 @@
+  <h1>{{ blog.title | link_to: blog.url }}</h1>
+  
   {% if blog.all_tags.size > 0 %}
     <ul class="blog-nav small--hide">
+      <li><a href="{{ blog.url }}">All</a></li>
       {% for tag in blog.all_tags %}
 
         {% if current_tags contains tag %}
