Changed rudiment grid

--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -1,3 +1,5 @@
+{% include 'geo' %}
+
 <div class="navigation-overlay" id="navigation-overlay">
   <div class="navigation-full">
     <a class="navigation-toggle">
