--- a/src/styles/modules/landing-page.scss
+++ b/src/styles/modules/landing-page.scss
@@ -46,7 +46,7 @@
         opacity: 1;
         position: relative;
         background: transparent;
-        padding-top: 1.5em;
+        padding: 1.5em 0 0 0;
      }
 
     .block-wrapper {
