--- a/src/styles/modules/blog.scss
+++ b/src/styles/modules/blog.scss
@@ -1,10 +1,30 @@
 .template-blog {
     .blog-nav {
-        width: 36%;
+        width: 56%;
         display: flex;
         justify-content: space-between;
         align-items: center;
         list-style: none;
         margin: 0 auto 5em auto;
     }
+    .grid {
+        margin-right: -30px;
+        margin-left: -60px;
+    }
+    .grid__item {
+        padding-left: 30px;
+    }
+    .grid__sizer {
+        width: calc(33.333% - 30px);
+    }
 }
+
+/*================ Mobile ================*/
+
+@include media-query($small) {
+    .template-blog {
+        .grid__sizer {
+            width: calc(50% - 30px);
+        }
+    }
+  }
