--- a/src/sections/footer.liquid
+++ b/src/sections/footer.liquid
@@ -1,4 +1,4 @@
-<footer>
+<footer class="page-footer">
   {%- assign footer_linklist = section.settings.footer_linklist -%}
   {% if linklists[footer_linklist].links.size > 0 %}
     <ul class="links">
@@ -12,6 +12,10 @@
     {% include 'newsletter' %}
   </div>
 </footer>
+
+
+{% javascript %}
+{% endjavascript %}
 
 {% schema %}
   {
