--- a/src/styles/global/slate-reset.scss
+++ b/src/styles/global/slate-reset.scss
@@ -67,12 +67,12 @@ option {
   Fast Tap
   enables no-delay taps (FastClick-esque) on supporting browsers
 ==============================================================================*/
-a,
-button,
-[role="button"],
-input,
-label,
-select,
-textarea {
-  touch-action: manipulation;
-}
+// a,
+// button,
+// [role="button"],
+// input,
+// label,
+// select,
+// textarea {
+//   touch-action: manipulation;
+// }
