--- a/src/sections/landing-page-item.liquid
+++ b/src/sections/landing-page-item.liquid
@@ -1,4 +1,5 @@
 
+   <div class="small--hide"> 
     <div class="grid__item {{ section.settings.class }} small--padding-top-default">
     <a href="{{ section.settings.landing-link }}" class="block-wrapper">
         <div>
@@ -18,7 +19,7 @@
         </div>
         </a>
     </div>
-
+</div>
 
 {% schema %}
   {
