--- a/src/styles/global/slate-reset.scss
+++ b/src/styles/global/slate-reset.scss
@@ -76,3 +76,8 @@ option {
 // textarea {
 //   touch-action: manipulation;
 // }
+
+*
+{        
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}    
