--- a/src/templates/blog.liquid
+++ b/src/templates/blog.liquid
@@ -1,4 +1,4 @@
-  <h1>{{ blog.title | link_to: blog.url }}</h1>
+  {% comment %} <h1>{{ blog.title | link_to: blog.url }}</h1> {% endcomment %}
   
   {% if blog.all_tags.size > 0 %}
     <ul class="blog-nav small--hide">
@@ -32,7 +32,16 @@
         <a href="{{ article.url }}" class="block-wrapper"> 
         <div>
         {% if article.image %}
-            {{ article | img_url: '1024x' | img_tag: article.title }}
+            {% assign img_url = article.image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' %}
+            <img id="{{ img_id }}"
+                class="lazyload"
+                src="{{ article.image | img_url: '600x600' }}"
+                data-src="{{ img_url }}"
+                data-widths="[180, 360, 540, 720, 800, 900, 1080, 1296, 1512, 1728, 2048]"
+                data-aspectratio="{{ article.image.aspect_ratio }}"
+                data-sizes="auto"
+                alt="{{ article.image.alt | escape }}">
+
         {% endif %}
             <div class="overlay small--hide">
                 <div class="overlay-content">
