--- a/src/sections/landing-page-item-mobile.liquid
+++ b/src/sections/landing-page-item-mobile.liquid
@@ -121,6 +121,27 @@
 {% endschema %}
 
 {% stylesheet %}
+  @media only screen and (max-width: 749px) {
+.logo {
+  background: url(https://cdn.shopify.com/s/files/1/0003/5618/8211/files/GREEN-DOT_small_90299469-fb9f-40f3-90e0-047b9d90e0d9.png);
+  background-position: -100px -100px;
+  background-size: 40px 40px;
+  background-repeat: no-repeat;
+  width: 170px;
+  height: 40px
+}
+.logo img {
+  width: 100%;
+  height: auto;
+}
+.logo.change {
+  background-position: center center;
+}
+
+.logo.change img {
+    visibility: hidden;
+  }
+  }
 {% endstylesheet %}
 
 {% javascript %}
@@ -141,7 +162,7 @@ try {
 
     new Siema({
       selector: siema,
-        duration: 2500, 
+        duration: 450, 
         easing: 'ease-out', 
         loop: true,
     });
@@ -181,14 +202,10 @@ $(document).ready(function () {
               $("a.site-logo").attr("href", "/collections/all");
                 $(window).on("scroll", function() {
                   if ($(window).scrollTop() >= 100 && isScrolling) {
-                    $(".logo-mobile").fadeOut(50, function(){
-                      $(".logo-mobile").fadeIn(50).attr("src","https://cdn.shopify.com/s/files/1/0003/5618/8211/t/8/assets/GREEN-DOT_small.png").addClass("logo-green");  
-                    });
+                        $('.logo').addClass('change');
                     isScrolling = false;
                   } else if ($(window).scrollTop() < 100 && !isScrolling) {
-                    $(".logo-mobile").fadeOut(50, function(){
-                      $(".logo-mobile").fadeIn(50).attr("src","https://cdn.shopify.com/s/files/1/0003/5618/8211/files/logo_600x600.png").removeClass("logo-green");
-                    });
+                        $('.logo').removeClass('change');
                     isScrolling = true;
                   }
                 });
