--- a/src/sections/product-list.liquid
+++ b/src/sections/product-list.liquid
@@ -11,7 +11,7 @@
                 class="lazyload"
                 src="{{ product.featured_image.src | img_url: '200x' }}"
                 data-src="{{ img_url }}"
-                data-widths="[180, 360, 540, 720, 800, 900, 1080, 1296, 1512, 1728, 2048]"
+                data-widths="[180, 360, 540, 720, 800, 900, 1080, 1296, 1512]"
                 data-aspectratio="{{ product.featured_image.src.aspect_ratio }}"
                 data-sizes="auto"
                 data-parent-fit="cover"
