--- a/src/styles/modules/collection.scss
+++ b/src/styles/modules/collection.scss
@@ -1,3 +1,23 @@
+body {
+    &.template-collection {
+        .product-info-wrap {
+            display: flex;
+            justify-content: center;
+
+            p {
+              width: 55%;
+              padding: 0;
+              text-align: left;
+              
+              &.right {
+                width: 45%;
+                text-align: right;
+              }
+            }
+        }
+    }
+}
+
 .grid.endless-scroll {
     .one-half:not(:nth-of-type(1)) {
         clear: both;
@@ -35,5 +55,40 @@
             &:nth-of-type(9) { padding-bottom: 0; }
             &:nth-of-type(10) { padding-bottom: 0; }
         }
+    }
+    body {
+        &.template-collection {
+            padding: 0;
+      
+              footer {
+                &.page-footer {
+                  padding: $gutter;
+                }
+              }
+              .collection-nav {
+                  margin: $gutter 0;
+              }
+      
+              .site-header {
+                padding: $gutter;
+              }
+
+               .product-info-wrap {
+                // display: flex;
+                // justify-content: center;
+
+                    p {
+                    // width: 50%;
+                    padding: 0 10px;
+                    // text-align: left;
+                    
+                    &.right {
+                        // width: 35%;
+                        // text-align: right;
+                    }
+                  }
+                 }
+      
+          }
     }
   }
