Small issues fixed

--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -59,7 +59,7 @@
     ">
     <div role="navigation" class="nav-link">
       <a class="navigation-toggle" href="#" data-toggle="body" style="display: flex;justify-content: flex-end;">
-        {% include 'icon-hamburger' %}
+        {% 'icon-hamburger' %}
       </a>
     </div> 
 
