--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -34,6 +34,24 @@
             <li><a href="{{ link.url }}">{{ link.title }}</a></li>
           {% endfor %}     
         </ul>
+          <div class="grid__item medium-up--one-quarter small--one-whole small--padding-top-default newsletter">
+           <div id="subscribe-box" style="display: flex;">
+            <form action="/search" method="get" role="search" style="width: 100%; display: flex; border-bottom: 1px solid #717171;">
+             <div id="email-input" style="flex-basis: 95%;">
+            <input type="search"
+                  name="q"
+                  id="Search"
+                  value="{{ search.terms | escape }}"
+                  placeholder="Search"
+                  style="width: 100%; border: 0; padding-bottom: 10px;">
+            </div>
+             <div id="submit-button" style="flex-basis: 5%;">    
+            <input type="submit" value="→" style="width: 100%; border: 0; background: transparent; padding-bottom: 10px;">
+            </div>
+            <input type="hidden" name="type" value="product" />
+          </form>
+             </div>
+        </div>
         {% comment %} <div class="grid__item medium-up--one-quarter small--one-whole small--padding-top-default newsletter">
          {% include 'newsletter-header' %}
         </div> {% endcomment %}
@@ -59,7 +77,7 @@
     ">
     <div role="navigation" class="nav-link">
       <a class="navigation-toggle" href="#" data-toggle="body" style="display: flex;justify-content: flex-end;">
-        {% 'icon-hamburger' %}
+        {% include 'icon-hamburger' %}
       </a>
     </div> 
 
@@ -168,7 +186,8 @@
 </div>
 
 <script>
-  $( ".navigation-toggle" ).click(function() {
+  $( ".navigation-toggle" ).click(function (e) {
+    e.preventDefault();
     $( ".navigation-overlay" ).slideToggle("slow");
   });
 </script>  
