Finished adding image optimumx

--- a/src/sections/landing-page-item.liquid
+++ b/src/sections/landing-page-item.liquid
@@ -11,6 +11,7 @@
                 data-widths="[180, 360, 540, 720, 800, 900, 1080, 1296, 1512, 1728, 2048]"
                 data-aspectratio="{{ section.settings.landing-image.aspect_ratio }}"
                 data-sizes="auto"
+                data-optimumx="1.5"
                 alt="{{ section.settings.landing-image.alt | escape }}">
 
                 <div class="overlay">
