--- a/src/sections/product-list.liquid
+++ b/src/sections/product-list.liquid
@@ -15,6 +15,7 @@
                 data-aspectratio="{{ product.featured_image.src.aspect_ratio }}"
                 data-sizes="auto"
                 data-parent-fit="cover"
+                data-optimumx="1.5"
                 alt="{{ product.featured_image.src.alt | escape }}">
           </a>
         {% endif %}
